fixed work to db