@@ -9,10 +9,13 @@ import org.springframework.web.servlet.view.RedirectView;
 import ru.otus.model.Address;
 import ru.otus.model.Client;
 import ru.otus.model.Phone;
+import ru.otus.model.dto.AddressDTO;
+import ru.otus.model.dto.ClientDTO;
+import ru.otus.model.dto.PhoneDTO;
 import ru.otus.services.DBServiceClient;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 @Controller
 public class AppControllers {
@@ -32,16 +35,17 @@ public class AppControllers {
     public String clientsListView(Model model) {
         List<Client> clients = repo.getClients();
         model.addAttribute("clientsList", clients);
-        Client client = new Client();
-        client.setNumbers(Arrays.asList(new Phone(), new Phone()));
-        client.setAddress(new Address());
-        model.addAttribute("client", client);
+
+        ClientDTO clientDTO = new ClientDTO("", new AddressDTO(), List.of(new PhoneDTO(), new PhoneDTO()));
+
+        model.addAttribute("clientDTO", clientDTO);
         return "clients";
     }
 
     @PostMapping({"/client/save"})
     public RedirectView clientSave(@ModelAttribute Client client) {
-        repo.saveClient(client);
-        return new RedirectView("/clients", true);
+        System.out.println(client);
+        //repo.saveClient(client);
+        return new RedirectView("/clients");
     }
 }
